[package]
name = "resistor"
version = "0.1.2"
edition = "2021"
authors = ["Denis Salmanovich"]
readme = "README.md"
description = "Resistor color code calculator written in Rust using egui and macroquad libraries."
repository = "https://github.com/denix666/resistor"
ducumentation = "https://github.com/denix666/resistor/blob/main/README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.15.0"
macroquad = "0.3.26"
